Fixed issue with text wrapping on reviews

--- a/frontend/src/components/GetOneSpot/IndividualSpotReviews/IndividualSpotReviews.css
+++ b/frontend/src/components/GetOneSpot/IndividualSpotReviews/IndividualSpotReviews.css
@@ -19,6 +19,11 @@
 .review-info.wrapper {
     padding-top: 10px;
     padding-bottom: 25px;
+    overflow: hidden;
+}
+
+.review-info.wrapper  > p {
+    word-break: break-all;
 }
 
 .review-info {
